--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             parentOrigin = event.data.origin;
             console.log("Event Data", event.data)
             console.log("Origin", event.data.origin)
-
+            console.log("Document Referrer", new URL(document.referrer).origin)
             // Now respond safely to the exact same origin
             window.parent.postMessage(
             {
